# Market-Stress-Detection-Using-Machine-Learning

./: README.md
ml-lab-project-main/ml-lab-project-main/: README.md  app.py  experimentation.ipynb  pyproject.toml  requirements_demo.txt  run_demo.bat  run_demo.sh
ml-lab-project-main/ml-lab-project-main/models/: market_pca.pkl  market_scaler.pkl  market_svm.pkl
